fix: add opacity and z-index to backgrounds

--- a/src/assets/scss/modules/_backgrounds.scss
+++ b/src/assets/scss/modules/_backgrounds.scss
@@ -16,12 +16,16 @@
       background-image: url("assets/img/background-pattern-b.svg");
       height: 225px;
       width: 230px;
+      z-index: -1;
+      opacity: 0.5;
     }
 
     &.bg-c {
       background-image: url("assets/img/background-pattern-c.svg");
       height: 227px;
       width: 289px;
+      z-index: -1;
+      opacity: 0.5;
     }
   }
 }
