--- a/src/assets/scss/templates/_confirmation.scss
+++ b/src/assets/scss/templates/_confirmation.scss
@@ -16,17 +16,18 @@
 
       .bg-c {
         right: 0;
-        top: 30px;
+        top: 10%;
       }
 
       .bg-b {
-        bottom: 0;
+        bottom: -60%;
         left: 100px;
       }
     }
 
     &-header {
       margin: variables.$dp-spaces--lv5 variables.$dp-spaces--lv8;
+      z-index: 100;
     }
 
     &-main {
@@ -38,6 +39,7 @@
       text-align: center;
       min-height: 70vh;
       padding: variables.$dp-spaces--lv2;
+      z-index: 100;
 
       button {
         color: colors.$dp-color-green;
@@ -66,6 +68,7 @@
       width: 100%;
       text-align: center;
       padding-bottom: variables.$dp-spaces--lv5;
+      z-index: 100;
     }
   }
   // TODO: fix the media-breakpoint block
